k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hackathon-hexxonmobil-frontend
  namespace: stage-backend
  labels:
    app.zenk8.net/team: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app.zenk8.net/name: hackathon-hexxonmobil-frontend
  template:
    metadata:
      labels:
        app.zenk8.net/name: hackathon-hexxonmobil-frontend
    spec:
      containers:
      - name: hackathon-hexxonmobil-frontend
        image: 236814333718.dkr.ecr.us-west-2.amazonaws.com/hackathon-hexxonmobil-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
          limits:
            memory: 200Mi
            cpu: 100m

---
apiVersion: v1
kind: Service
metadata:
  name: hackathon-hexxonmobil-frontend
  namespace: stage-backend
  labels:
    app.zenk8.net/team: devops
spec:
  type: ClusterIP
  selector:
    app.zenk8.net/name: hackathon-hexxonmobil-frontend
  ports:
  - name: web
    port: 3000
    protocol: TCP
    targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:236814333718:certificate/f384c501-8be5-4f8b-b7f3-305cc70c7ed4
    alb.ingress.kubernetes.io/group.name: backend-internal
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  name: hackathon-hexxonmobil-frontend
  namespace: stage-backend
  labels:
    app.zenk8.net/team: devops
spec:
  rules:
  - host: hexxonmobil-frontend.zendrive.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hackathon-hexxonmobil-frontend
            port:
              name: web
